// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Core Policy Gates Golden Master > canCreateContract > matches golden master for missing quotation 1`] = `
{
  "allowed": false,
  "reason": "Không tìm thấy báo giá.",
}
`;

exports[`Core Policy Gates Golden Master > canCreateContract > matches golden master for valid quotation 1`] = `
{
  "allowed": true,
}
`;

exports[`Core Policy Gates Golden Master > canCreatePayment > matches golden master for missing source 1`] = `
{
  "allowed": false,
  "reason": "Không tìm thấy nguồn tham chiếu.",
}
`;

exports[`Core Policy Gates Golden Master > canCreatePayment > matches golden master for valid Contract source 1`] = `
{
  "allowed": true,
}
`;

exports[`Core Policy Gates Golden Master > canCreatePayment > matches golden master for valid Quotation source (Dịch vụ) 1`] = `
{
  "allowed": true,
}
`;

exports[`Core Policy Gates Golden Master > canCreatePayment > matches golden master for valid Quotation source (Vật tư) 1`] = `
{
  "allowed": true,
}
`;
